Try to fix test failure on java11